--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Lahijpay
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:4pQ/pxjqFcWEYSXkc+czu3OrrXqbxpn/CD3veaap1eM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=lahijpay
 DB_USERNAME=root
 DB_PASSWORD=
 
