--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "sadegh19b/laravel-persian-validation": "^1.4",
         "shetabit/payment": "^5.4"
     },
     "require-dev": {
