--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Lahijpay
 APP_ENV=local
-APP_KEY=base64:4pQ/pxjqFcWEYSXkc+czu3OrrXqbxpn/CD3veaap1eM=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
