--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "mokhosh/filament-jalali": "^3.2",
         "sadegh19b/laravel-persian-validation": "^1.4",
         "shetabit/payment": "^5.4"
     },
