--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "filament/filament": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
+        "hekmatinasser/verta": "^8.3",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
