--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,17 @@
 DirectoryIndex index.php
 <IfModule mod_rewrite.c>
     RewriteEngine On
+    
+    # Redirect HTTP to HTTPS
+    RewriteBase /
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    
+    # Redirect www to non-www
+    RewriteBase /
+    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+    
     RewriteBase /
     RewriteRule ^$ public/index.php [L]
     RewriteRule ^((?!public/).*)$ public/$1 [L,NC]
