--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
+        "flowframe/laravel-trend": "*",
         "guzzlehttp/guzzle": "^7.2",
         "hekmatinasser/verta": "^8.3",
         "laravel/framework": "^10.10",
